DSS-5443 : alignment issue resolved (#3473)

--- a/web/cpdss-portal/apps/cpdss/src/app/business/synoptical/synoptical-table/synoptical-table.component.scss
+++ b/web/cpdss-portal/apps/cpdss/src/app/business/synoptical/synoptical-table/synoptical-table.component.scss
@@ -17,5 +17,7 @@
 }
 
 .port-center {
-  padding-right: 4% !important;
+  .error-icon-wrapper{
+    display: inline-block !important;
+  }
 }
